<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_screen"
    android:background="@color/material_on_primary_disabled"
    android:padding="25dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/artifika"
            android:text="@string/welcome_to_our_attendance_app"
            android:textColor="@color/teal_700"
            android:textSize="38sp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/artifika"
            android:text="@string/lets_mark_your_attendance"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/artifika"
            android:text="@string/what_do_you_want"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/login"
                android:textColor="@color/black"
                android:layout_weight="1"

                android:layout_marginEnd="10dp"
                android:background="@color/teal_200"
                 />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/signup"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:layout_weight="1"

                android:layout_marginStart="5dp"
                android:background="@color/teal_200"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>