<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login_screen"
    android:background="@color/purple_200"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_back_button"
            android:padding="5dp">


        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/artifika"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                style=""
                android:id="@+id/reg_Roll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_roll_no."
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_usericon">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:fontFamily="@font/artifika"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style=""
                android:id="@+id/reg_Email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_usericon">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:fontFamily="@font/artifika"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style=""
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/ic_lock"
                app:boxStrokeColor="@color/black"
                app:endIconMode="password_toggle"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:fontFamily="@font/artifika"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                style=""
                android:id="@+id/reg_cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:startIconDrawable="@drawable/ic_lock"
                app:boxStrokeColor="@color/black"
                app:endIconMode="password_toggle"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:fontFamily="@font/artifika"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RadioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_one"
                    android:text="@string/Student"
                    android:textSize="20sp"
                    android:onClick="checkButton"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_two"
                    android:text="@string/Instructor"
                    android:textSize="20sp"
                    android:onClick="checkButton"/>
            </RadioGroup>

            <Button
                android:id="@+id/sigup_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:fontFamily="@font/artifika"
                android:text="@string/signup"
                android:textColor="@color/white">

            </Button>

        </LinearLayout>


    </LinearLayout>


</ScrollView>